Clean everything up

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typedoc-default-themes",
+  "name": "typedoc-twilio-theme",
   "description": "Default themes for TypeDoc.",
   "version": "0.5.0",
   "homepage": "http://typedoc.org/",
